<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013-2014 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">AsantiKeypad</string>
    <string name="keyboard_layouts_label">Pro1 keypad</string>
    <!-- WARNING: The translation MUST always start with 'FinQwerty' -->
    <string name="pro1_qwerty_cze_1">FinQwerty F(x)tec Pro1, Czech for physical QWERTY</string>
    <!-- WARNING: The translation MUST always start with 'FinQwerty' -->
    <string name="pro1_qwerty_dan_1">FinQwerty F(x)tec Pro1, Danish for physical QWERTY</string>
    <!-- WARNING: The translation MUST always start with 'FinQwerty' -->
    <string name="pro1_qwerty_fin_1">FinQwerty F(x)tec Pro1, Finnish for physical QWERTY</string>
    <!-- WARNING: The translation MUST always start with 'FinQwerty' -->
    <string name="pro1_qwerty_nor_1">FinQwerty F(x)tec Pro1, Norwegian for physical QWERTY</string>
    <!-- WARNING: The translation MUST always start with 'FinQwerty' -->
    <string name="pro1_qwerty_swe_1">FinQwerty F(x)tec Pro1, Swedish for physical QWERTY</string>
    <!-- WARNING: The translation MUST always start with 'FinQwerty' -->
    <string name="pro1_qwerty_usa_1">FinQwerty F(x)tec Pro1, U.S. for physical QWERTY</string>
    <!-- WARNING: The translation MUST always start with 'FinQwerty' -->
    <string name="pro1_qwerty_usaintl_1">FinQwerty F(x)tec Pro1, U.S. international for physical QWERTY</string>
    <!-- WARNING: The translation MUST always start with 'FinQwerty' -->
    <string name="pro1_qwertz_dan_1">FinQwerty F(x)tec Pro1, Danish for physical QWERTZ</string>
    <!-- WARNING: The translation MUST always start with 'FinQwerty' -->
    <string name="pro1_qwertz_fin_1">FinQwerty F(x)tec Pro1, Finnish for physical QWERTZ</string>
    <!-- WARNING: The translation MUST always start with 'FinQwerty' -->
    <string name="pro1_qwertz_ger_1">FinQwerty F(x)tec Pro1, German for physical QWERTZ</string>
    <!-- WARNING: The translation MUST always start with 'FinQwerty' -->
    <string name="pro1_qwertz_nor_1">FinQwerty F(x)tec Pro1, Norwegian for physical QWERTZ</string>
    <!-- WARNING: The translation MUST always start with 'FinQwerty' -->
    <string name="pro1_qwertz_swe_1">FinQwerty F(x)tec Pro1, Swedish for physical QWERTZ</string>
    <!-- WARNING: The translation MUST always start with 'FinQwerty' -->
    <string name="pro1_qwertz_usa_1">FinQwerty F(x)tec Pro1, U.S. for physical QWERTZ</string>
    <!-- WARNING: The translation MUST always start with 'FinQwerty' -->
    <string name="pro1_qwertz_usaintl_1">FinQwerty F(x)tec Pro1, U.S. international for physical QWERTZ</string>
</resources>
