<?xml version="1.0" encoding="utf-8"?>

<keyboard-layouts xmlns:android="http://schemas.android.com/apk/res/android">
    <keyboard-layout android:name="pro1_qwerty_cze_1" android:label="@string/pro1_qwerty_cze_1" android:keyboardLayout="@raw/pro1_qwerty_cze_1"/>
    <keyboard-layout android:name="pro1_qwerty_dan_1" android:label="@string/pro1_qwerty_dan_1" android:keyboardLayout="@raw/pro1_qwerty_dan_1"/>
    <keyboard-layout android:name="pro1_qwerty_fin_1" android:label="@string/pro1_qwerty_fin_1" android:keyboardLayout="@raw/pro1_qwerty_fin_1"/>
    <keyboard-layout android:name="pro1_qwerty_nor_1" android:label="@string/pro1_qwerty_nor_1" android:keyboardLayout="@raw/pro1_qwerty_nor_1"/>
    <keyboard-layout android:name="pro1_qwerty_swe_1" android:label="@string/pro1_qwerty_swe_1" android:keyboardLayout="@raw/pro1_qwerty_swe_1"/>
    <keyboard-layout android:name="pro1_qwerty_usa_1" android:label="@string/pro1_qwerty_usa_1" android:keyboardLayout="@raw/pro1_qwerty_usa_1"/>
    <keyboard-layout android:name="pro1_qwerty_usaintl_1" android:label="@string/pro1_qwerty_usaintl_1" android:keyboardLayout="@raw/pro1_qwerty_usaintl_1"/>
    <keyboard-layout android:name="pro1_qwertz_dan_1" android:label="@string/pro1_qwertz_dan_1" android:keyboardLayout="@raw/pro1_qwertz_dan_1"/>
    <keyboard-layout android:name="pro1_qwertz_fin_1" android:label="@string/pro1_qwertz_fin_1" android:keyboardLayout="@raw/pro1_qwertz_fin_1"/>
    <keyboard-layout android:name="pro1_qwertz_ger_1" android:label="@string/pro1_qwertz_ger_1" android:keyboardLayout="@raw/pro1_qwertz_ger_1"/>
    <keyboard-layout android:name="pro1_qwertz_nor_1" android:label="@string/pro1_qwertz_nor_1" android:keyboardLayout="@raw/pro1_qwertz_nor_1"/>
    <keyboard-layout android:name="pro1_qwertz_swe_1" android:label="@string/pro1_qwertz_swe_1" android:keyboardLayout="@raw/pro1_qwertz_fin_1"/>
    <keyboard-layout android:name="pro1_qwertz_usa_1" android:label="@string/pro1_qwertz_usa_1" android:keyboardLayout="@raw/pro1_qwertz_usa_1"/>
    <keyboard-layout android:name="pro1_qwertz_usaintl_1" android:label="@string/pro1_qwertz_usaintl_1" android:keyboardLayout="@raw/pro1_qwertz_usaintl_1"/>
</keyboard-layouts>
